# pytanque

./: .gitignore  README.md  client.py  protocol.atd  protocol.py  pyproject.toml
.github/workflows/: docs.yml  tests.yml
docs/: api_overview.rst  api_reference.rst  conf.py  development.rst  index.rst  installation.rst  quickstart.rst  troubleshooting.rst
examples/: .gitignore  foo.py  foo.v  getting_started.ipynb
pytanque/: __init__.py  client.py  params.py  protocol.atd  protocol.py  response.py  routes.py
tests/: conftest.py  test_api.py  test_integration.py  test_stdio.py  test_unit.py
