[project]
name = "pytanque"
version = "0.2.1"
description = ""
authors = [
    {name = "Guillaume Baudart", email = "guillaume.baudart@inria.fr"},
    {name = "Emilio J. Gallego Arias", email = "emilio-jesus.gallego-arias@inria.fr"},
    {name = "Laetitia Teodorescu", email = "laetitia.teodorescu@inria.fr"},
    {name = "Jules Viennot", email = "jules.viennot@inria.fr"}
]
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "typing-extensions>=4.15.0",
    "requests"
]

[project.optional-dependencies]
docs = [
    "sphinx>=6.0.0",
    "furo>=2024.1.29",
    "myst-parser[linkify]>=2.0.0",
    "sphinx-autodoc-typehints>=1.0.0",
    "numpydoc>=1.5.0"
]

[tool.uv]
package = true
dev-dependencies = [
    "pytest>=8.4.2",
]
